--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <section class="banner-section">
         <div class="banner-header">
-            <div class="logo">LOGO</div>
+            <div class="logo_1">LOGO</div>
             <button class="sign-up-btn">Sign Up</button>
         </div>
         <div class="banner-content">
