--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <section class="bnner-section">
+    <section class="banner-section">
         <div class="banner-header">
             <div class="logo_1">LOGO</div>
             <button class="sign-up-btn">Sign Up</button>
